Github Copilot 프로젝트 설정 가이드 추가 및 Lint 분석 설정 추가 : fix : 파싱 오류 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/93

--- a/.github/copilot/config.json
+++ b/.github/copilot/config.json
@@ -33,6 +33,6 @@
   },
   "context": {
     "documentationFiles": [".github/copilot/context.md"],
-    "prioritizeStructure": ["models", "enums", "icons", "widgets"],
+    "prioritizeStructure": ["models", "enums", "icons", "widgets"]
   }
 }
