--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_sign_in: ^6.2.2
   http: ^1.3.0
   kakao_flutter_sdk: ^1.9.6
+  intl: ^0.20.2
   logging: ^1.3.0
   permission_handler: ^11.3.1
   provider: ^6.1.5
