--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   geolocator: ^13.0.2
   google_sign_in: ^6.2.2
+  gradient_borders: ^1.0.1
   http: ^1.3.0
   kakao_flutter_sdk: ^1.9.6
   intl: ^0.20.2
