IOS 빌드 CICD 파일 및 FILEUPLOAD 업데이트 : fix : SECRET_XCONFIG 파일 업데이트 및 FILE-AUTO-UPLOAD에 해당 파일 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/112

--- a/.github/workflows/ROMROM-FILE-AUTO-UPLOAD.yaml
+++ b/.github/workflows/ROMROM-FILE-AUTO-UPLOAD.yaml
@@ -1,4 +1,4 @@
-name: ROMROM 설정 파일 관리
+name: 프로젝트 설정 파일 관리
 
 on:
   push:
@@ -80,6 +80,16 @@ jobs:
             echo "경고: Google-services.json이 비어 있거나 생성되지 않았습니다"
           fi
 
+          # iOS용 Secrets.xcconfig 파일 생성
+          mkdir -p ios/Flutter
+          echo "// 자동 생성된 Secrets.xcconfig 파일입니다" > ios/Flutter/Secrets.xcconfig
+          echo "// iOS 빌드를 위한 비밀 설정" >> ios/Flutter/Secrets.xcconfig
+          if [ -s "ios/Flutter/Secrets.xcconfig" ]; then
+            echo "Secrets.xcconfig 파일 생성 성공 (크기: $(stat -c%s ios/Flutter/Secrets.xcconfig) 바이트)"
+          else
+            echo "경고: Secrets.xcconfig 파일이 비어 있거나 생성되지 않았습니다"
+          fi
+
           # 파일 목록 확인
           echo "=== 현재 디렉토리 (/): ==="
           ls -la .env
@@ -87,6 +97,8 @@ jobs:
           ls -la android/key.properties android/Google-services.json
           echo "=== android/app/keystore/ 디렉토리: ==="
           ls -la android/app/keystore/key.jks
+          echo "=== ios/Flutter/ 디렉토리: ==="
+          ls -la ios/Flutter/Secrets.xcconfig
 
       # 짧은 커밋 해시 계산
       - name: 짧은 커밋 해시 계산
@@ -106,6 +118,7 @@ jobs:
           KEY_SIZE=$(stat -c%s "android/app/keystore/key.jks" 2>/dev/null || echo "0")
           KEY_PROPERTIES_SIZE=$(stat -c%s "android/key.properties" 2>/dev/null || echo "0")
           GOOGLE_SERVICES_SIZE=$(stat -c%s "android/Google-services.json" 2>/dev/null || echo "0")
+          SECRETS_XCCONFIG_SIZE=$(stat -c%s "ios/Flutter/Secrets.xcconfig" 2>/dev/null || echo "0")
           
           # JSON 파일 생성
           cat > cicd-gitignore-file.json << EOF
@@ -157,6 +170,12 @@ jobs:
                 "file_path": "android/",
                 "file_size": "${GOOGLE_SERVICES_SIZE}",
                 "last_updated": "${BUILD_DATE}"
+              },
+              {
+                "file_name": "Secrets.xcconfig",
+                "file_path": "ios/Flutter/",
+                "file_size": "${SECRETS_XCCONFIG_SIZE}",
+                "last_updated": "${BUILD_DATE}"
               }
             ]
           }
@@ -184,6 +203,7 @@ jobs:
           cp -v android/app/keystore/key.jks gitignore_files/${TIMESTAMP}/ || echo "key.jks 파일 복사 실패"
           cp -v android/key.properties gitignore_files/${TIMESTAMP}/ || echo "key.properties 파일 복사 실패"
           cp -v android/Google-services.json gitignore_files/${TIMESTAMP}/ || echo "Google-services.json 파일 복사 실패"
+          cp -v ios/Flutter/Secrets.xcconfig gitignore_files/${TIMESTAMP}/ || echo "Secrets.xcconfig 파일 복사 실패"
           cp -v cicd-gitignore-file.json gitignore_files/${TIMESTAMP}/ || echo "cicd-gitignore-file.json 파일 복사 실패"
           
           echo "타임스탬프 폴더 파일 준비 완료:"
@@ -210,6 +230,7 @@ jobs:
           cp -v android/app/keystore/key.jks gitignore_files/latest/ || echo "key.jks 파일 복사 실패"
           cp -v android/key.properties gitignore_files/latest/ || echo "key.properties 파일 복사 실패"
           cp -v android/Google-services.json gitignore_files/latest/ || echo "Google-services.json 파일 복사 실패"
+          cp -v ios/Flutter/Secrets.xcconfig gitignore_files/latest/ || echo "Secrets.xcconfig 파일 복사 실패"
           cp -v cicd-gitignore-file.json gitignore_files/latest/ || echo "cicd-gitignore-file.json 파일 복사 실패"
           
           echo "최신 파일 폴더 준비 완료:"
