--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -7,20 +7,6 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "d19e1d3913d25ff0e209baf6e288df2e",
-      "css": "tempLogo",
-      "code": 59408,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M548.4 987.8L369.6 660.7H227.3V989.1H6V10H398.8C474.2 10 540.3 23.4 597 50.1 653.8 76.9 697.6 114.6 728.4 163.2 759.2 211.1 774.6 266.2 774.6 328.6 774.6 394.3 758 452.7 724.7 503.8 691.5 554.9 645.3 594.2 586.1 621.8L791.6 987.8H548.4ZM227.3 198.5V470.9H370.8C430 470.9 474.6 458.8 504.6 434.5 535.4 409.3 550.8 374.5 550.8 329.9 550.8 287.7 535.8 255.3 505.8 232.6 476.6 209.9 431.6 198.5 370.8 198.5H227.3Z",
-        "width": 797
-      },
-      "search": [
-        "temp-logo"
-      ]
-    },
-    {
       "uid": "87b98ed9bc5d88ce277b470201a5ee79",
       "css": "cancel",
       "code": 59395,
@@ -147,31 +133,45 @@
       ]
     },
     {
-      "uid": "7a412bb810485f3ba7fc1c6a260d8151",
+      "uid": "d19e1d3913d25ff0e209baf6e288df2e",
+      "css": "tempLogo",
+      "code": 59408,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M548.4 987.8L369.6 660.7H227.3V989.1H6V10H398.8C474.2 10 540.3 23.4 597 50.1 653.8 76.9 697.6 114.6 728.4 163.2 759.2 211.1 774.6 266.2 774.6 328.6 774.6 394.3 758 452.7 724.7 503.8 691.5 554.9 645.3 594.2 586.1 621.8L791.6 987.8H548.4ZM227.3 198.5V470.9H370.8C430 470.9 474.6 458.8 504.6 434.5 535.4 409.3 550.8 374.5 550.8 329.9 550.8 287.7 535.8 255.3 505.8 232.6 476.6 209.9 431.6 198.5 370.8 198.5H227.3Z",
+        "width": 797
+      },
+      "search": [
+        "temp-logo"
+      ]
+    },
+    {
+      "uid": "7be4771a3a01f43f3cb452a9a543060b",
       "css": "navigateBefore",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M533 36.9C550.2 55.1 549.5 83.8 531.3 101.1L111.5 500 531.3 898.9C549.5 916.2 550.2 944.9 533 963.1 515.7 981.3 486.9 982.1 468.7 964.8L14.1 533C5.1 524.4 0 512.5 0 500 0 487.5 5.1 475.6 14.1 467L468.7 35.2C486.9 17.9 515.7 18.7 533 36.9Z",
+        "width": 545
+      },
+      "search": [
+        "navigatebefore"
+      ]
+    },
+    {
+      "uid": "b5872e9858187e40adb7a3ee205fb2b7",
+      "css": "detail-view",
       "code": 59394,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M561.6 100.4C575.2 114.7 574.6 137.3 560.3 150.9L230.4 464.3 560.3 777.7C574.6 791.3 575.2 813.9 561.6 828.2 548 842.5 525.4 843 511.1 829.5L154 490.2C146.9 483.4 142.9 474.1 142.9 464.3 142.9 454.5 146.9 445.1 154 438.4L511.1 99.1C525.4 85.5 548 86.1 561.6 100.4Z",
-        "width": 821
+        "path": "M107.7 936.1C85.4 957.2 50.3 956.3 29.2 934.1 8.1 911.8 9 876.7 31.2 855.6L405.5 500 31.2 144.4 27.2 140.3C8.9 118.9 9.4 86.8 29.2 65.9 49 45.1 81.1 42.9 103.4 60.2L107.7 63.9 524.4 459.7C535.4 470.2 541.7 484.8 541.7 500 541.7 515.2 535.4 529.8 524.4 540.2L107.7 936.1Z",
+        "width": 556
       },
       "search": [
-        "back"
-      ]
-    },
-    {
-      "uid": "0821f7f62cf836aa968d7c5af13a0ac9",
-      "css": "onBoardingProgressCheck",
-      "code": 59414,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M1200.2 2.4A130 130 0 0 0 1154.1 24.7C1149.1 28.9 997.3 185.6 817 372.9A65318.3 65318.3 0 0 1 487.4 714 8655.6 8655.6 0 0 1 341.2 542.9 23701 23701 0 0 0 188.9 363.2 109.6 109.6 0 0 0 52.4 347.6C0.2 381.2-15.8 457.3 18.7 508.6 22.6 514.3 111.2 620.4 215.6 744.3 356 911 408.8 972.1 418.2 979A108.7 108.7 0 0 0 542 981.4C552.8 974.6 1305.4 192.9 1314.4 179.2 1327.6 159.2 1332.1 142.3 1331.9 114.4 1331.8 95.1 1330.8 87.2 1326.9 76.7A112.6 112.6 0 0 0 1200.2 2.4",
-        "width": 1333
-      },
-      "search": [
-        "onboardingprogresscheck"
+        "detail-view"
       ]
     }
   ]
