물건탭 나의 등록된 물건 리스트 목록 페이지 구현 필요 : feat : 헤더 css 조정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/124

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -161,9 +161,9 @@
       ]
     },
     {
-      "uid": "c24ec2dffc3967ba040729e7ed9e9b08",
-      "css": "additemplus",
-      "code": 59439,
+      "uid": "3b855c543a50e63f76af0e7c3ad2d00b",
+      "css": "addItemPlus",
+      "code": 59394,
       "src": "custom_icons",
       "selected": true,
       "svg": {
