물건탭 나의 등록된 물건 리스트 목록 페이지 구현 필요 : feat : svg 파일 아이콘으로 변경 https://github.com/TEAM-ROMROM/RomRom-FE/issues/124

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -175,17 +175,31 @@
       ]
     },
     {
-      "uid": "5a827f33826e17ea3d67537aef4aa419",
-      "css": "additemplus",
-      "code": 59438,
+      "uid": "0eb2bbd2e4116ffa3f324f9ab46a4121",
+      "css": "itemRegisterHeart",
+      "code": 59435,
       "src": "custom_icons",
-      "selected": false,
+      "selected": true,
       "svg": {
-        "path": "",
-        "width": 1000
+        "path": "M174.9 94.5C304.2-16 471.4 5.7 583 106.7 694.5 5.6 859.8-14.6 990.7 94.2 1132.3 211.8 1149.3 412.5 1040.3 552.8 998.2 606.9 915.8 688.5 836.2 763.7 755.8 839.6 675.6 911.3 636 946.4 632.1 949.8 627.4 954.1 622.9 957.4 617.9 961.2 611 965.6 601.9 968.3 589.6 972 576.4 972 564.1 968.3 555.1 965.6 548.2 961.2 543.2 957.4 538.8 954.1 534 949.8 530.1 946.4 490.5 911.3 410.2 839.6 329.8 763.7 250.2 688.5 167.9 606.9 125.8 552.8 16.4 412 36.4 212.8 174.9 94.5ZM576.1 928.5C578.3 929.1 580.7 929.4 583 929.4 580.7 929.4 578.2 929 576 928.4L576.1 928.5ZM589.9 928.4C587.7 929 585.4 929.4 583 929.4 585.4 929.4 587.8 929.1 590 928.5L589.9 928.4Z",
+        "width": 1167
       },
       "search": [
-        "additemplus"
+        "itemregisterheart"
+      ]
+    },
+    {
+      "uid": "cebdf5e6b4f712094e5fbd8083836294",
+      "css": "onboardingProgressCheck",
+      "code": 59436,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M1300.8 33.8C1344.2 78.9 1344.2 151.9 1300.8 197L560 966.2C538.3 988.8 508.5 1001 477.8 999.9 447.1 998.9 418.1 984.6 397.9 960.6L27.5 521C-12.9 473.1-8.2 400.2 37.9 358.2 84.1 316.3 154.3 321.1 194.7 369.1L486.9 715.8 1143.7 33.8C1187-11.3 1257.4-11.3 1300.8 33.8Z",
+        "width": 1333
+      },
+      "search": [
+        "onboardingprogresscheck"
       ]
     }
   ]
