--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -201,6 +201,20 @@
       "search": [
         "onboardingprogresscheck"
       ]
+    },
+    {
+      "uid": "edd559e7ad5de9658f9ea397c8aa324d",
+      "css": "warning",
+      "code": 59406,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M107.1 830.4C146.2 830.4 177.9 862.1 177.9 901.2 177.9 940.3 146.2 972 107.1 972 68 972 36.3 940.3 36.3 901.2 36.3 862.1 68 830.4 107.1 830.4ZM107.1 28.1C170.3 28.1 219.6 82.6 213.4 145.5L159 689C156.4 715.7 133.9 736 107.1 736 80.3 736 57.9 715.7 55.2 689L0.9 145.5C-5.4 82.6 44 28.1 107.1 28.1Z",
+        "width": 214
+      },
+      "search": [
+        "warning"
+      ]
     }
   ]
 }
