--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_sign_in: ^6.2.2
   gradient_borders: ^1.0.1
   http: ^1.3.0
+  http_parser: ^4.1.2
   image_picker: ^1.1.2
   kakao_flutter_sdk: ^1.9.6
   intl: ^0.20.2
