1차 로고 변경안 도입 : feat : 로그인 페이지 R 텍스트 수정, 앱 로고 아이콘 수정 (안드로인드 IOS) https://github.com/TEAM-ROMROM/RomRom-FE/issues/147

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -133,20 +133,6 @@
       ]
     },
     {
-      "uid": "d19e1d3913d25ff0e209baf6e288df2e",
-      "css": "tempLogo",
-      "code": 59408,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M548.4 987.8L369.6 660.7H227.3V989.1H6V10H398.8C474.2 10 540.3 23.4 597 50.1 653.8 76.9 697.6 114.6 728.4 163.2 759.2 211.1 774.6 266.2 774.6 328.6 774.6 394.3 758 452.7 724.7 503.8 691.5 554.9 645.3 594.2 586.1 621.8L791.6 987.8H548.4ZM227.3 198.5V470.9H370.8C430 470.9 474.6 458.8 504.6 434.5 535.4 409.3 550.8 374.5 550.8 329.9 550.8 287.7 535.8 255.3 505.8 232.6 476.6 209.9 431.6 198.5 370.8 198.5H227.3Z",
-        "width": 797
-      },
-      "search": [
-        "temp-logo"
-      ]
-    },
-    {
       "uid": "7be4771a3a01f43f3cb452a9a543060b",
       "css": "navigateBefore",
       "code": 59393,
@@ -228,6 +214,20 @@
       },
       "search": [
         "detailview"
+      ]
+    },
+    {
+      "uid": "46fd8adfd6ecfb4a5e58967a9c5a6818",
+      "css": "romromRLogoText",
+      "code": 59453,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M714.2 623.7L646.2 527.9C665.9 498.9 677.6 463.9 677.6 426.2 677.6 326.6 597 246 497.7 246L402.1 246.1C382.7 245.1 362.8 250 345.3 261.6 323.5 276 309.6 297.9 304.7 321.7 304.5 322.4 304.5 323.1 304.3 323.8 304.1 324.7 304 325.4 303.8 326.3 303.7 326.9 303.6 327.7 303.6 328.4 303.4 329.2 303.3 330.1 303.2 330.9 303.2 331.6 303.1 332.2 303.1 332.9 303 333.8 302.9 334.7 302.9 335.6 302.9 336.3 302.8 336.9 302.8 337.6 302.8 338.5 302.7 339.4 302.7 340.4 302.7 340.6 302.7 340.8 302.7 340.9V680.9C302.7 733.3 345.1 775.7 397.3 775.7 449.5 775.7 491.9 733.2 491.9 680.9V637.5L556.2 728C584.9 771.7 643.6 783.8 687.2 755 730.8 726.1 742.9 667.4 714.1 623.7H714.2ZM497.7 478.8C495.7 478.8 493.8 478.7 491.9 478.5V373.9C493.8 373.7 495.7 373.6 497.7 373.6 526.7 373.6 550.2 397.1 550.2 426.2 550.2 455.3 526.7 478.9 497.7 478.9V478.8Z",
+        "width": 1000
+      },
+      "search": [
+        "icon"
       ]
     }
   ]
