TestFlight 자동 배포를 위한 GitHub Actions 워크플로우 구현 : fix : 문법 이슈 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/155

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,8 @@ Flutter/flutter_assets/
 !default.pbxuser
 !default.perspectivev3
 /ios/GoogleService-Info.plist
+
+# iOS signing files
+*.p12
+*.p8
+*.mobileprovision
