--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: romrom_fe
-description: "A new Flutter project."
+description: "ROMROM-FE"
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+5
