--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   # firebase_core: ^3.11.0
   flutter_dotenv: ^5.2.1
   flutter_lints: ^3.0.0
-  flutter_naver_map: ^1.3.0
+  flutter_naver_map: ^1.3.1
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
   geolocator: ^13.0.2
@@ -26,7 +26,7 @@ dependencies:
   http: ^1.3.0
   http_parser: ^4.0.2
   image_picker: ^1.1.2
-  kakao_flutter_sdk: ^1.9.6
+  kakao_flutter_sdk: ^1.9.7+3
   intl: ^0.20.2
   logging: ^1.3.0
   permission_handler: ^11.3.1
