--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -139,13 +139,23 @@ jobs:
           uuid=$(grep -A1 -a "UUID" profile.mobileprovision | grep string | sed -e "s/<string>//" -e "s/<\/string>//" -e "s/[[:space:]]//g")
           cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
 
-      # 간단한 Flutter 빌드 (자동 서명)
+      # 자동 서명 강제 활성화
+      - name: Enable Automatic Signing
+        run: |
+          cd ios
+          # project.pbxproj에서 자동 서명 활성화
+          sed -i '' 's/CODE_SIGN_STYLE = Manual/CODE_SIGN_STYLE = Automatic/g' Runner.xcodeproj/project.pbxproj
+          sed -i '' 's/PROVISIONING_PROFILE_SPECIFIER = .*//' Runner.xcodeproj/project.pbxproj
+
       - name: Build iOS app
         run: |
           flutter build ipa --release \
             --build-name="${{ needs.version-bump.outputs.new_version }}" \
             --build-number="${{ needs.version-bump.outputs.build_number }}" \
-            --export-options-plist=ios/ExportOptions.plist
+            --export-options-plist=ios/ExportOptions.plist \
+            -- \
+            -allowProvisioningUpdates \
+            DEVELOPMENT_TEAM="${{ secrets.APPLE_TEAM_ID }}"
 
       # ExportOptions.plist 파일 생성
       - name: Create ExportOptions.plist
