--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -152,7 +152,7 @@ jobs:
           flutter build ipa --release \
             --build-name="${{ needs.version-bump.outputs.new_version }}" \
             --build-number="${{ needs.version-bump.outputs.build_number }}" \
-            --export-options-plist=ios/ExportOptions.plist \
+            --export-options-plist=ios/ExportOptions.plist -- -allowProvisioningUpdates DEVELOPMENT_TEAM=${{ secrets.APPLE_TEAM_ID }}
 
       # ExportOptions.plist 파일 생성
       - name: Create ExportOptions.plist
@@ -186,7 +186,7 @@ jobs:
         run: |
           xcrun altool --upload-app \
             --type ios \
-            --file "build/ios/ipa/RomRom-FE.ipa" \
+            --file "build/ios/ipa/Runner.ipa" \
             --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
             --apiIssuer ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
 
