--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -152,6 +152,17 @@ jobs:
               <string>app-store</string>
               <key>teamID</key>
               <string>CUK22HY6YC</string>
+              <key>provisioningProfiles</key>
+              <dict>
+                  <key>com.alom.romrom</key>
+                  <string>RomRom Distribution</string>
+              </dict>
+              <key>signingStyle</key>
+              <string>manual</string>
+              <key>signingCertificate</key>
+              <string>Apple Distribution</string>
+              <key>stripSwiftSymbols</key>
+              <true/>
               <key>uploadBitcode</key>
               <false/>
               <key>uploadSymbols</key>
