--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -206,14 +206,16 @@ jobs:
           mkdir -p ~/.appstoreconnect/private_keys
           echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 --decode > ~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8
 
-      # TestFlight 업로드
+      # Upload to TestFlight
       - name: Upload to TestFlight
         run: |
+          IPA_PATH=$(echo ios/build/ipa/*.ipa)   # 첫 번째 ipa 파일 경로
+          echo "Uploading $IPA_PATH"
           xcrun altool --upload-app \
-            --type ios \
-            --file "ios/build/ipa/Runner.ipa" \
-            --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
-            --apiIssuer ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+          --type ios \
+          --file "$IPA_PATH" \
+          --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
+          --apiIssuer ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
 
       # 성공 알림
       - name: Notify TestFlight Upload Success
