--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = 롬롬
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.romromFe
+PRODUCT_BUNDLE_IDENTIFIER = com.alom.romrom
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.romrom. All rights reserved.
