deploy 브랜치에서 배포 관리 : feat :  deploy에서만 배포하도록 workflow 수정  https://github.com/TEAM-ROMROM/RomRom-FE/issues/158

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -2,7 +2,7 @@ name: ROMROM-Android-CICD
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "deploy"]
 
 jobs:
   build-android:
@@ -175,6 +175,7 @@ jobs:
     name: Deploy Android APK
     runs-on: ubuntu-latest
     needs: build-android
+    if: github.ref == 'refs/heads/deploy'
 
     steps:
       - name: Checkout code
