--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -11,5 +11,10 @@ reviews:
   auto_review:
     enabled: true
     drafts: false
+  path_filters:
+    - "**/*"
+  branch_filters:
+    - "main"
+    - "deploy"
 chat:
   auto_reply: true
